--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,10 @@ body>*{
   border: 1px solid gray;
   border-radius: 3px;
   overflow: hidden;
-  width: 70%;
+}
+
+#json, textarea {
+  width: 80%;
   min-width: 364px; 
 }
 
